<resources>
    <string name="app_name" translatable="false">Android Platform</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="updating_user">Изменение данных пользователя</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="hint_login">Введите логин</string>
    <string name="hint_phone">Телефон</string>
    <string name="phone_pattern">+7(999)999–99–99</string>
    <string name="surname_pattern">Иванов</string>
    <string name="name_pattern">Иван</string>
    <string name="patronymic_pattern">Иванович</string>
    <string name="full_name_pattern">Иванов Иван Иванович</string>
    <string name="birthdate_hint">День рождения</string>
    <string name="password_masked" translatable="false">********</string>
    <string name="hint_password">Введите пароль</string>
    <string name="notification_code">Ваш код</string>
    <string name="hint_repeat_password">Повторно введите пароль</string>
    <string name="hint_input_sms_code">Введите код из СМС</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="confirm_changes">Подтвердить изменения</string>
    <string name="logout_from_account">Выйти из аккаунта</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="password_restoration">Восстановление пароля</string>
    <string name="password_change">Изменение пароля</string>
    <string name="fill_fields">Заполните поля</string>
    <string name="fill_field">Заполните поле</string>
    <string name="cards">Карты</string>
    <string name="bank_card">Банковские карты</string>
    <string name="debit_card">Дебетовые</string>
    <string name="debit_card_title">Дебетовая карта</string>
    <string name="debit_card_description">Дебетовая карта — финансовый инструмент для безналичных расчетов.</string>
    <string name="credit_card">Кредитные</string>
    <string name="credit_card_title">Кредитная карта</string>
    <string name="credit_card_description">Кредитная карта — это платежная карта, на которой лежат деньги банка. Если оплачиваете что-то кредитной картой, берете у банка в долг — эти деньги нужно вернуть.</string>
    <string name="accounts">Счета</string>
    <string name="order_card">Заказать карту</string>
    <string name="open_account">Открыть счет</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="male_eng" translatable="false">Male</string>
    <string name="female">Женский</string>
    <string name="female_eng" translatable="false">Female</string>
    <string name="my_bank">Мой банк</string>
    <string name="history">История</string>
    <string name="login">Логин</string>
    <string name="phone_number">Телефон</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic" translatable="false">Отчество</string>
    <string name="sex">Пол</string>
    <string name="birthdate">День рождения</string>
    <string name="address">Адресс</string>
    <string name="spending">Расходы</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="empty">Не удалось получить клиентов</string>
    <string name="auth_error">Ошибка аутентификации</string>
    <string name="do_you_want_exit">Вы точно хотите выйти?</string>
    <string name="unsaved_changes">Несохранённые изменения будут потеряны.</string>
    <string name="cancel">Отмена</string>
    <string name="logout">Выйти</string>
    <string name="email" translatable="false">Email</string>
    <string name="invalid_credentials">Некорректные учетные данные</string>
    <string name="successful_registration">Вы успешно зарегистрированы!</string>
    <string name="passwords_missmatch">Пароли не совпадают</string>
    <string name="clear_field">Очистить поле</string>
    <string name="resend_code">Отправить код еще раз</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_repeat">Повторите новый пароль</string>
    <string name="change_password">Обновите пароль</string>
    <string name="update_data">Обновить данные</string>
    <string name="login_error">Некорректный логин</string>
    <string name="code_error">Код должен содержать 4 цифры</string>
    <string name="send_code_error">Некорректный код</string>
    <string name="do_you_want_change_password">Вы хотите сбросить или изменить пароль?</string>
    <string name="send_password_error">Некорректный пароль</string>
    <string name="password_change_successful">Пароль успешно изменен</string>
    <string name="code_was_resent">Код отправлен повторно</string>
    <string name="reset">Сбросить</string>
    <string name="change">Изменить</string>
    <string name="password_was_reset">Пароль был сброшен на %s</string>
    <string name="required_field">Обязательное поле</string>
    <string name="order">Заказать</string>
    <string name="personal_data">Персональные данные</string>
    <string name="passport_data">Паспортные данные</string>
    <string name="birthdate_pattern" translatable="false">01.01.2000</string>
    <string name="card_ordered_successfully">Заказ оформлен,\nдождитесь звонка от менеджера</string>
    <string name="account_opened_successfully">Счет открыт</string>
    <string name="back_to_dashboard">Вернуться в мой банк</string>
    <string name="program_type">Программа выпуска</string>
    <string name="account_currency">Валюта счёта</string>
    <string name="mir" translatable="false">МИР</string>
    <string name="visa" translatable="false">Visa</string>
    <string name="mastercard" translatable="false">Mastercard</string>
    <string name="maestro" translatable="false">Maestro</string>
    <string name="transaction">Транзакция</string>
    <string name="account_number">Счёт отправителя:</string>
    <string name="account_number_receiver">Счёт получателя:</string>
    <string name="account_name">Название счёта:</string>
    <string name="transaction_date">Время выполнения:</string>
    <string name="transaction_amount">Сумма:</string>
    <string name="transaction_comment">Комментарий:</string>
    <string name="transaction_reason">Причина:</string>
    <string name="transaction_state">Статус:</string>
    <string name="transaction_state_hold">Удержание</string>
    <string name="transaction_state_completed">Завершено</string>
    <string name="transaction_state_canceled">Отменено</string>
    <string name="transaction_type">Тип:</string>
    <string name="transaction_type_income">Доходы</string>
    <string name="transaction_type_expense">Расходы</string>
    <string name="unknown">Неизвестно</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="edit">Редактировать</string>
    <string name="current_account">Текущий</string>
    <string name="current_account_title">Текущий счет</string>
    <string name="saving_account">Накопительный</string>
    <string name="saving_account_title">Накопительный счёт</string>
    <string name="current_account_description">Текущий счет позволяет не только хранить на нем деньги, но и оплачивать с него покупки и услуги, делать переводы людям и организациям.</string>
    <string name="saving_account_description">Накопительный счет — банковский продукт, подразумевающий передачу денег на хранение в банк под проценты. Он отличается от классического денежного депозита сроком размещения и условиями начисления процентов, но дает больше возможностей управления собственными средствами.</string>
    <string name="open">Открыть</string>
    <string name="ruble">Российский Рубль</string>
    <string name="dollar">Доллар США</string>
    <string name="euro">Евро</string>
    <string name="yuan">Китайский Юань</string>
    <string name="card_info">Информация о карте</string>
    <string name="card_number">Номер карты:</string>
    <string name="card_num_hint">Номер карты, 16 цифр</string>
    <string name="card_number_hiden" translatable="false">**** **** **** %s</string>
    <string name="card_expiration_date">До:</string>
    <string name="card_expiration_delimeter" translatable="false">\ /\ </string>
    <string name="card_program">Платежная система карты:</string>
    <string name="card_product">Тип карты:</string>
    <string name="card_state">Статус карты:</string>
    <string name="card_state_created">Создана</string>
    <string name="card_state_active">Активна</string>
    <string name="card_state_locked">Заблокирована</string>
    <string name="card_state_expired">Просрочена</string>
    <string name="card_state_blocked">Закрыта</string>
    <string name="block_card">Заблокировать</string>
    <string name="unblock_card">Разблокировать</string>
    <string name="activate_card">Активировать</string>
    <string name="dialog_block_card_title">Заблокировать</string>
    <string name="dialog_block_card_message">Вы хотите заблокировать карту?</string>
    <string name="dialog_unblock_card_title">Разблокировать</string>
    <string name="dialog_unblock_card_message">Вы хотите разблокировать карту?</string>
    <string name="input_pin_code">Введите пин-код для карты:</string>
    <string name="cvc_code">CVC код:</string>
    <string name="cvc_code_hiden" translatable="false">***</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="pin_code_continue">Продолжить</string>
    <string name="incorrect_pin_code">Неправильный пин-код</string>
    <string name="account_number_title">Номер счета:</string>
    <string name="replenish_number">Пополнить счет</string>
    <string name="replenish">Пополнить</string>
    <string name="account_state">Статус счета:</string>
    <string name="account_state_active">Активна</string>
    <string name="account_state_blocked">Заблокирована</string>
    <string name="block_account">Заблокировать счет</string>
    <string name="dialog_block_account_message">Вы хотите заблокировать счет?</string>
    <string name="unblock_account">Разблокировать счет</string>
    <string name="dialog_unblock_account_message">Вы хотите разблокировать счет?</string>
    <string name="replenish_account_by_own_account">Со своего счета</string>
    <string name="replenish_account_from_another_bank_card">С карты другого банка</string>
    <string name="write_off_account">Счет списания</string>
    <string name="recipient_account">Счет зачисления</string>
    <string name="replenishment_sum">Сумма зачисления</string>
    <string name="sum_hint">Сумма, от 1  до 1000000000</string>
    <string name="next">Далее</string>
    <string name="confirm_operation">Подтвердите оперцию</string>
    <string name="confirm">Подтвердить</string>
    <string name="operation_successfully_completed">Перевод успешно выполнен</string>
    <string name="write_off_card">Карта списания</string>
    <string name="password_length_range">Длина пароля от %s до %s символов.</string>
    <string name="wait_for_resent_sms">Придется подождать перед переотправкой смс, в качестве извенений посмотрите пока на капибару</string>
    <string name="secret_way_to_dashboard">Секретный путь на дашборд</string>
</resources>
