<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="45dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="45dp" />

    <TextView
        android:id="@+id/authorization_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/text_size_16"
        android:text="@string/registration"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mobile_et"/>

    <TextView
        android:id="@+id/fill_fields_tv"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/fill_fields"
        android:textSize="@dimen/text_size_12"
        android:textColor="@color/gray_2"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintTop_toBottomOf="@+id/authorization_tv"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintBottom_toTopOf="@+id/mobile_et"
        />

    <EditText
        android:id="@+id/mobile_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:paddingVertical="@dimen/_12dp"
        android:background="@drawable/edit_text_frame"
        android:hint="@string/phone_pattern"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fill_fields_tv"
        app:layout_constraintBottom_toTopOf="@+id/surname_et"/>

    <EditText
        android:id="@+id/surname_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_12dp"
        android:hint="@string/surname_pattern"
        android:textSize="@dimen/text_size_12"
        android:background="@drawable/edit_text_frame"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/mobile_et"
        app:layout_constraintBottom_toTopOf="@+id/name_et"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_12dp"
        android:hint="@string/name_pattern"
        android:textSize="@dimen/text_size_12"
        android:background="@drawable/edit_text_frame"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/surname_et"
        app:layout_constraintBottom_toTopOf="@+id/patronymic_et"/>

    <EditText
        android:id="@+id/patronymic_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_12dp"
        android:hint="@string/patronymic_pattern"
        android:textSize="@dimen/text_size_12"
        android:background="@drawable/edit_text_frame"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_et"
        app:layout_constraintBottom_toTopOf="@+id/birthdate_et"/>

    <EditText
        android:id="@+id/birthdate_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_12dp"
        android:hint="@string/birthdate_pattern"
        android:textSize="@dimen/text_size_12"
        android:background="@drawable/edit_text_frame"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/patronymic_et"
        app:layout_constraintBottom_toTopOf="@+id/gender_ll"/>

    <LinearLayout
        android:id="@+id/gender_ll"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_et"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/gray_3"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/gender_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/gray_3"
                android:buttonTint="@color/radio_button_tint"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_3"
                android:textSize="@dimen/text_size_12"
                android:layout_marginStart="22dp"
                android:buttonTint="@color/radio_button_tint"
                android:text="@string/female"/>
        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_12dp"
        android:hint="@string/password_masked"
        android:textSize="@dimen/text_size_12"
        android:background="@drawable/edit_text_frame"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/gender_ll"
        app:layout_constraintBottom_toTopOf="@+id/password_repeat_et"/>

    <EditText
        android:id="@+id/password_repeat_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_12dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_12dp"
        android:hint="@string/password_masked"
        android:textSize="@dimen/text_size_12"
        android:background="@drawable/edit_text_frame"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        app:layout_constraintBottom_toTopOf="@+id/enter_btn"/>

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray_2"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_et"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        android:enabled="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>