<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/open_current_account_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_6"
        android:enabled="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_account_title"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/gray_2"
            android:layout_marginHorizontal="@dimen/_18dp"
            android:layout_marginTop="@dimen/_18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_account_description"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/gray_2"
            android:layout_marginHorizontal="@dimen/_18dp"
            android:layout_marginTop="@dimen/_18dp"
           />

        <Button
            android:id="@+id/open_current_account_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48dp"
            android:backgroundTint="@color/orange"
            android:text="@string/open"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12"
            android:fontFamily="@font/inter_regular"
            android:layout_marginHorizontal="@dimen/_18dp"
            android:layout_marginVertical="@dimen/_18dp"
            app:cornerRadius="@dimen/_0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
