<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50dp"
            android:text="@string/replenish_number"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/text_size_16" />

        <Button
            android:id="@+id/account_transfer_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_58dp"
            android:layout_marginTop="@dimen/_28dp"
            android:layout_marginHorizontal="@dimen/_45dp"
            android:gravity="center"
            android:text="@string/replenish_account_by_own_account"
            android:textColor="@color/gray_3"
            android:fontFamily="@font/inter_regular"
            android:textSize="@dimen/text_size_16"
            app:cornerRadius="@dimen/_0dp"
            android:backgroundTint="@color/gray_5"
            android:drawableEnd="@drawable/arrow_forward"/>

        <Button
            android:id="@+id/account_refill_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_58dp"
            android:layout_marginTop="@dimen/_28dp"
            android:layout_marginHorizontal="@dimen/_45dp"
            android:gravity="center"
            android:text="@string/replenish_account_from_another_bank_card"
            android:textColor="@color/gray_3"
            android:fontFamily="@font/inter_regular"
            android:textSize="@dimen/text_size_16"
            app:cornerRadius="@dimen/_0dp"
            android:backgroundTint="@color/gray_5"
            android:drawableEnd="@drawable/arrow_forward"/>
    </LinearLayout>
</FrameLayout>
