<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidplatform.ui.restoration_password.RestorePasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="45dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="45dp" />

    <TextView
        android:id="@+id/password_restoration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/password_restoration"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/mobile_et"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mobile_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_frame"
        android:hint="@string/phone_pattern"
        android:maxLines="1"
        android:paddingVertical="@dimen/_12dp"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toTopOf="@+id/sms_code_et"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_restoration_tv" />

    <EditText
        android:id="@+id/sms_code_et"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_frame"
        android:hint="@string/hint_input_sms_code"
        android:paddingVertical="@dimen/_12dp"
        android:textSize="@dimen/text_size_12"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/enter_btn"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/mobile_et" />

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray_3"
        android:enabled="false"
        android:paddingVertical="@dimen/_12dp"
        android:text="@string/restore_password"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sms_code_et"
        />


</androidx.constraintlayout.widget.ConstraintLayout>